Endre overskrifter og knappenavn fra norsk til engelsk

--- a/src/main/resources/static/oblig1kino.html
+++ b/src/main/resources/static/oblig1kino.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <!-- Overskrift for billettbestillingssiden -->
-<h1>Cinema Ticket Booking</h1>
+<h1>Bestilling av kinobilletter</h1>
 <!-- Tabell for å samle inn billettdetaljer -->
 <table>
     <!-- egen dropdown liste for filmvalg -->
@@ -32,17 +32,17 @@
     <tr><td>Epost</td><td><input type="text" id="epost"/><span id="epostError"></span></td></tr>
 
     <!-- Knapp for å kjøpe billeter -->
-    <tr><td><button onclick="buyTicket()">Buy tickets</button></td></tr>
+    <tr><td><button onclick="buyTicket()">Kjøp billetter</button></td></tr>
 </table>
 
 <!-- Overskrift for billettereservasjoner -->
-<h2>Ticket reservations</h2>
+<h2>Alle billetter</h2>
 
 <!-- Div-element for å vise billettereservasjoner -->
 <div id="cinemaRegister"></div>
 
 <!-- Knapp for å slette alle data -->
-<button onclick="deleteAllData()">Delete all data</button>
+<button onclick="deleteAllData()">Slett Data</button>
 
 </body>
 </html>
